--- a/docs/getting-started/download-soda.mdx
+++ b/docs/getting-started/download-soda.mdx
@@ -40,22 +40,26 @@ export const DownloadURL = ({ children, os }) => (
 This application has been developed and tested on both Windows 10 and Windows 11.
 
 1. <DownloadURL os="windows">Download the Windows installer</DownloadURL>
-2. Double click on the installer (.exe file), it will start the installation process (if there is a permission issue try to right-click and select "Run as administrator").
+2. Double click on the installer (.exe file), it will start the installation process (if there is a permission issue try to right-click and select `Run as administrator`).
 3. Follow the installation instructions.
-4. Once the application is installed, you can run the application by either running the desktop shortcut, searching for "SODA" on the start menu, or from the installation folder.
+4. Once the application is installed, you can run the application by either running the desktop shortcut, searching for `SODA` on the start menu, or from the installation folder.
 5. To stop the application, simply click on the cross in the top right corner.
 
 The downloaded installer file could be deleted since it is not necessary to run SODA. The SODA app can be uninstalled from the Program manager (under Control Panel) like any other app on Windows.
+
+:::note
+When uninstalling SODA for COVID-19 Research on Windows, some additional files might not be removed from the system. To manually remove these items, you can delete the `C:\Users\[username]\AppData\Local\Programs\soda-for-covid-19-research` folder.
+:::
 
 ### macOS
 
 This application has been developed on macOS Catalina 10.15 and has been tested on both macOS Catalina and Big Sur.
 
 1. <DownloadURL os="macos">Download the macOS installer</DownloadURL>
-2. Double-click on the installer (.dmg file) and, in the installation window, drag the SODA icon into the "Applications" folder. Security preferences may need to be changed (System Preferences > Security & Privacy > General Tab > "Open anyway").
+2. Double-click on the installer (.dmg file) and, in the installation window, drag the SODA icon into the `Applications` folder. Security preferences may need to be changed (System Preferences > Security & Privacy > General Tab > `Open anyway`).
 3. To stop the application, click on the red circle/button in the top left corner.
 
-The downloaded installer could be deleted since it is not necessary to run SODA. To uninstall the SODA app, simply delete it from your computer’s "Applications" folder.
+The downloaded installer could be deleted since it is not necessary to run SODA. To uninstall the SODA app, simply delete it from your computer’s `Applications` folder.
 
 ### Ubuntu
 
