Update names to FAIRshare

--- a/docs/getting-started/user-interface.mdx
+++ b/docs/getting-started/user-interface.mdx
@@ -8,7 +8,7 @@ import ReactPlayer from "react-player";
 
 ## Watch the user interface demo
 
-Watch our short video to get familiarized with SODA's user interface
+Watch our short video to get familiarized with FAIRshare's user interface
 
 <ReactPlayer controls url="https://www.youtube.com/watch?v=Fyn9R0Tk_pU" />
 
