Update all the css variables

--- a/docs/getting-started/download-soda.mdx
+++ b/docs/getting-started/download-soda.mdx
@@ -56,7 +56,7 @@ When uninstalling SODA for COVID-19 Research on Windows, some additional files m
 This application has been developed on macOS Catalina 10.15 and has been tested on both macOS Catalina and Big Sur.
 
 1. <DownloadURL os="macos">Download the macOS installer</DownloadURL>
-2. Double-click on the installer (.dmg file) and, in the installation window, drag the SODA icon into the `Applications` folder. Security preferences may need to be changed (System Preferences > Security & Privacy > General Tab > `Open anyway`).
+2. Double-click on the installer (.dmg file) and, in the installation window, drag the SODA icon into the `Applications` folder. Security preferences may need to be changed (`System Preferences` > `Security & Privacy` > `General` tab > `Open anyway`).
 3. To stop the application, click on the red circle/button in the top left corner.
 
 The downloaded installer could be deleted since it is not necessary to run SODA. To uninstall the SODA app, simply delete it from your computer’s `Applications` folder.
