--- a/docs/getting-started/user-interface.mdx
+++ b/docs/getting-started/user-interface.mdx
@@ -4,13 +4,7 @@ sidebar_position: 2
 
 # User Interface
 
-import ReactPlayer from "react-player";
-
-## Watch the user interface demo
-
-Watch our short video to get familiarized with FAIRshare's user interface
-
-<ReactPlayer controls url="https://www.youtube.com/watch?v=Fyn9R0Tk_pU" />
+FAIRshare has been designed with the user in mind. The user interface is designed to be intuitive and easy to use. Some simple tips to help you get started are provided below.
 
 ## Notes
 
