Add images for home page

--- a/docs/getting-started/download-soda.mdx
+++ b/docs/getting-started/download-soda.mdx
@@ -75,7 +75,7 @@ FAIRshare may work on other Debian based distributions but we have not tested co
 4. Double click the downloaded FAIRshare app icon and it should open the app.
 5. To stop the application, click on the red circle/button in the top left corner.
 
-Since our Linux FAIRshare app is in the AppImage format, you can move this file anywhere on your computer and run it. If you would like to move the app into the applications older, we recommend you use the open-source [AppImage Launcher](https://github.com/TheAssassin/AppImageLauncher) to organize and handle all AppImage programs for your Linux system.
+Since our Linux version of the FAIRshare app is in the AppImage format, you can move this file anywhere on your computer and run it. If you would like to move the app into the applications older, we recommend you use the open-source [AppImage Launcher](https://github.com/TheAssassin/AppImageLauncher) to organize and handle all AppImage programs for your Linux system.
 
 import PageFeedback from "@site/src/components/PageFeedback";
 
