Update app naming

--- a/docs/getting-started/download-soda.mdx
+++ b/docs/getting-started/download-soda.mdx
@@ -45,7 +45,7 @@ This application has been developed and tested on both Windows 10 and Windows 11
 4. Once the application is installed, you can run the application by either running the desktop shortcut, searching for `FAIRshare` on the start menu, or from the installation folder.
 5. To stop the application, simply click on the cross in the top right corner.
 
-The downloaded installer file could be deleted since it is not necessary to run FAIRshare. The SODA app can be uninstalled from the Program manager (under Control Panel) like any other app on Windows.
+The downloaded installer file could be deleted since it is not necessary to run FAIRshare. The FAIRshare app can be uninstalled from the Program manager (under Control Panel) like any other app on Windows.
 
 :::note
 When uninstalling FAIRshare for COVID-19 Research on Windows, some additional files might not be removed from the system. To manually remove these items, you can delete the `C:\Users\[username]\AppData\Local\Programs\soda-for-covid-19-research` folder.
