--- a/docs/getting-started/download-soda.mdx
+++ b/docs/getting-started/download-soda.mdx
@@ -12,7 +12,7 @@ export const DownloadURL = ({ children, os }) => (
     rel="noopener"
     onClick={async () => {
       const res = await fetch(
-        "https://api.github.com/repos/fairdataihub/SODA-for-COVID-19-Research/releases"
+        "https://api.github.com/repos/fairdataihub/FAIRshare/releases"
       );
       const data = await res.json();
       const release = data[0];
@@ -48,7 +48,7 @@ This application has been developed and tested on both Windows 10 and Windows 11
 The downloaded installer file could be deleted since it is not necessary to run FAIRshare. The FAIRshare app can be uninstalled from the Program manager (under Control Panel) like any other app on Windows.
 
 :::note
-When uninstalling FAIRshare for COVID-19 Research on Windows, some additional files might not be removed from the system. To manually remove these items, you can delete the `C:\Users\[username]\AppData\Local\Programs\soda-for-covid-19-research` folder.
+When uninstalling FAIRshare for COVID-19 Research on Windows, some additional files might not be removed from the system. To manually remove these items, you can delete the `C:\Users\[username]\AppData\Local\Programs\fairshare` folder.
 :::
 
 ### macOS
